[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ronum-calculator"
authors = [
    {name = "Odin"},
]
description = "Confusing calculator"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["keboola", "storage"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
]
dynamic = ["version"]
